[gd_scene load_steps=17 format=3 uid="uid://cq22hqejprpaf"]

[ext_resource type="Script" path="res://System/Main_menu/scenes/character_maker_scene.gd" id="1_r2yq7"]
[ext_resource type="PackedScene" uid="uid://c53d636hm5mxn" path="res://System/Main_menu/scenes/character_sprite/character_sprites.tscn" id="1_x3scw"]
[ext_resource type="FontFile" uid="uid://ckdkjdb6ovipj" path="res://Assets/Text_fonts/m5x7.ttf" id="2_gqjt5"]
[ext_resource type="Script" path="res://System/Main_menu/scenes/preloads.gd" id="3_86slr"]
[ext_resource type="Texture2D" uid="uid://cqvdr25tydphq" path="res://System/Main_menu/sprites/tile_0010.png" id="3_ah7t2"]
[ext_resource type="Texture2D" uid="uid://b7jroqr44l6i5" path="res://System/Main_menu/sprites/tile_0062.png" id="3_vea1m"]
[ext_resource type="Texture2D" uid="uid://ck0euls37td8d" path="res://System/Main_menu/sprites/tile_0062B.png" id="4_fyu0g"]
[ext_resource type="Texture2D" uid="uid://ds00dn7tiolui" path="res://System/Main_menu/sprites/tile_0010C.png" id="7_87jp1"]
[ext_resource type="Theme" uid="uid://cciho8772x3fi" path="res://System/Main_menu/themes/lable.tres" id="7_tqht5"]
[ext_resource type="Script" path="res://System/Main_menu/scenes/Direction.gd" id="10_mhrth"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_61r20"]
content_margin_right = 16.0
texture = ExtResource("3_vea1m")
texture_margin_left = 21.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 18.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyuwj"]
content_margin_right = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mp0rw"]
content_margin_right = 16.0
texture = ExtResource("4_fyu0g")
texture_margin_left = 21.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 18.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xucvj"]
content_margin_right = 16.0
texture = ExtResource("3_vea1m")
texture_margin_left = 21.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 18.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nhftk"]
content_margin_right = 16.0
texture = ExtResource("3_vea1m")
texture_margin_left = 21.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 18.0
modulate_color = Color(0.772549, 0.772549, 0.772549, 1)

[sub_resource type="Theme" id="Theme_bld7e"]
Button/colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
Button/colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("2_gqjt5")
Button/styles/disabled = SubResource("StyleBoxTexture_61r20")
Button/styles/focus = SubResource("StyleBoxEmpty_pyuwj")
Button/styles/hover = SubResource("StyleBoxTexture_mp0rw")
Button/styles/normal = SubResource("StyleBoxTexture_xucvj")
Button/styles/pressed = SubResource("StyleBoxTexture_nhftk")

[node name="CharacterMakerScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2yq7")

[node name="Preloads" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_86slr")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("3_ah7t2")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Panel_options1" type="PanelContainer" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(376, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel_options1"]
layout_mode = 2
theme_override_constants/margin_top = 22
theme_override_constants/margin_bottom = 22

[node name="GridContainer" type="GridContainer" parent="PanelContainer/Panel_options1/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="left" type="Button" parent="PanelContainer/Panel_options1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 5.85
theme = SubResource("Theme_bld7e")
theme_override_constants/outline_size = 0
action_mode = 0
text = "<-"

[node name="lable_hair_style" type="Label" parent="PanelContainer/Panel_options1/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("7_tqht5")
text = "Hair syile
"

[node name="right" type="Button" parent="PanelContainer/Panel_options1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 5.85
theme = SubResource("Theme_bld7e")
theme_override_constants/outline_size = 0
action_mode = 0
text = "->
"

[node name="left2" type="Button" parent="PanelContainer/Panel_options1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 5.85
theme = SubResource("Theme_bld7e")
theme_override_constants/outline_size = 0
action_mode = 0
text = "<-"

[node name="lable_hair_color" type="Label" parent="PanelContainer/Panel_options1/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("7_tqht5")
text = "Hair Color"

[node name="right2" type="Button" parent="PanelContainer/Panel_options1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 5.85
theme = SubResource("Theme_bld7e")
theme_override_constants/outline_size = 0
action_mode = 0
text = "->
"

[node name="Character_panel" type="PanelContainer" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/Character_panel"]
layout_mode = 2
texture = ExtResource("7_87jp1")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Control" type="Control" parent="PanelContainer/Character_panel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CharacterSprites" parent="PanelContainer/Character_panel/Control" instance=ExtResource("1_x3scw")]
unique_name_in_owner = true
scale = Vector2(5, 5)

[node name="Panel_options2" type="PanelContainer" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(376, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel_options2"]
layout_mode = 2
theme_override_constants/margin_top = 22
theme_override_constants/margin_bottom = 22

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel_options2/MarginContainer"]
layout_mode = 2

[node name="Direction" type="HBoxContainer" parent="PanelContainer/Panel_options2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("10_mhrth")

[node name="left" type="Button" parent="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 5.85
theme = SubResource("Theme_bld7e")
theme_override_constants/outline_size = 0
action_mode = 0
text = "<-"

[node name="lable_hair_style" type="Label" parent="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("7_tqht5")
text = "Direction
"

[node name="right" type="Button" parent="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 5.85
theme = SubResource("Theme_bld7e")
theme_override_constants/outline_size = 0
action_mode = 0
text = "->
"

[connection signal="button_up" from="PanelContainer/Panel_options1/MarginContainer/GridContainer/left" to="." method="_on_left_button_up"]
[connection signal="button_up" from="PanelContainer/Panel_options1/MarginContainer/GridContainer/right" to="." method="_on_right_button_up"]
[connection signal="button_up" from="PanelContainer/Panel_options1/MarginContainer/GridContainer/left2" to="." method="_on_left_2_button_up"]
[connection signal="button_up" from="PanelContainer/Panel_options1/MarginContainer/GridContainer/right2" to="." method="_on_right_2_button_up"]
[connection signal="button_up" from="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction/left" to="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction" method="_on_left_button_up"]
[connection signal="button_up" from="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction/right" to="PanelContainer/Panel_options2/MarginContainer/VBoxContainer/Direction" method="_on_right_button_up"]
